# machine-learning

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements.txt
01_classification/: 01_classification.ipynb  README.md
02_mlp/: 02_mlp.ipynb  README.md
algorithms/include/algorithms/: logistical_regression.hpp
algorithms/include/algorithms/maths/: functions.hpp  operations.hpp  types.hpp
algorithms/src/: logistical_regression.cpp
datasets/: README.md
practice/: exam.tex  practice_03.tex  practice_04.tex
samples/logistical_regression/: README.md
samples/logistical_regression/datasets/: 01_testing.csv  01_training.csv
samples/logistical_regression/src/: main.cpp
tests/math/: operations.cpp
utils/include/utils/: dataset.hpp
utils/src/: dataset.cpp
